package Western;

public class Story {
    public static void narrate(String text) {
        System.out.print("Once upon a time in far far west land...\n");
        System.out.print(text);
        System.out.println();
    }   
}
